L13 added printMessageByDate() to HistoryPrinter.java; handle creating file if not exist;